--- a/src/App.css
+++ b/src/App.css
@@ -9,13 +9,7 @@
 
 .App-header {
   background-color: #222;
-  height: 50px;
-  padding: 20px;
-  color: white;
-  text-align: left;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 1em;
-  font-weight: bold;
+  height: 150px;
 }
 
 .App-title {
@@ -52,6 +46,21 @@ tr {
   text-align: center;
 }
 
+.card {
+  width: 18rem;
+}
+/* ////***************************************************EMPIEZO A EDITAR ///***************************/
+#logo {
+  width: 100px;
+  padding: 20px;
+}
+#name-hotel {
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 4em;
+  font-weight: bold;
+  padding: 30px;
+}
 .card {
   width: 18rem;
 }
